# doi-trace

./: .gitignore  1_1_eos_wos.py  1_2_eos_scopus.py  1_3_eos_crossref.py  1_4_eos_datacite.py  1_5_1_gs_serpapi.py  1_5_2_gs_get_increment.py  1_5_3_gs_process_urls.py  1_5_4_eos_google.py  2_combine_doi_sources.py  TODO.md  config.toml.example  eosutilities.py  pyproject.toml  readme.md
doi_trace/: __main__.py  cli.py  combine.py  config.py
doi_trace/reference_sources/: base.py  crossref.py  datacite.py  google_scholar.py  scopus.py  web_of_science.py
