[project]
name = "DOITrace"
version = "1.0.0"

requires-python = ">= 3.11"

description = "This project addresses the persistent challenges in tracking and analyzing dataset citations within scholarly literature, which are critical for evaluating dataset impact, ensuring proper attribution, and aligning with Findability, Accessibility, Interoperability, and Reusability (FAIR) data principles."

readme = "README.md"
license-files = ["LICENSE"]

authors = [
  { name = "Irina Gerasimov" },
  { name = "Jon Carlson" },
  { name = "Ben Forshey" },

]
dependencies = [
  "beautifulsoup4",
  "click",
  "crossrefapi",
  "deepmerge",
  "elsapy",
  "habanero",
  "jellyfish",
  "pandas",
  "requests",
  "sentencepiece",
  "serpapi",
  "tenacity",
  "tqdm",
] # In zsh: `python -m pip install .`

[project.urls]
Repository = "https://github.com/nasa/doi-trace"

[dependency-groups]
dev = ["ruff"]

[tool.setuptools]
packages = ["doi_trace"]